src/test/deca/codegen/invalid/result/test_null_output.res
Error: deref_null_error
